Dodana optimizacija za autentifikaciju korisnika, kao i kontrola pristupa u zavisnosti od uloge

--- a/SoftwAIR-Alpha/appsettings.json
+++ b/SoftwAIR-Alpha/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql11.freesqldatabase.com;Port=3306;Database=sql11415618;User=sql11415618;Password=e1P1yGGSef;"
+    "DefaultConnection": "Server=sql11.freesqldatabase.com;Port=3306;Database=sql11415618;User=sql11415618;Password=e1P1yGGSef;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SoftwAIR-Alpha;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
